Fixes problem with estimate being visible when in lightbox

--- a/public/themes/bettermeans/stylesheets/application.css
+++ b/public/themes/bettermeans/stylesheets/application.css
@@ -1664,7 +1664,7 @@ table .odd {
 }
 
 table.list tr {
-	line-height: 1em;
+	line-height: 1.1em;
 }
 
 table.list td.currency {
